fix menu on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -53,6 +53,11 @@ nav {
     padding-block: 1rem;
     width: 100%;
 
+    @media screen and (max-width: 960px) {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
     a,
     a:visited {
         color: var(--link-color);
